Fixes alignment on up down buttons

--- a/web/src/app/editor/up-down/up-down.component.scss
+++ b/web/src/app/editor/up-down/up-down.component.scss
@@ -2,6 +2,6 @@
     margin-top: 10px;
   }
   
-  .up-down-button {
+  .up-down-button-spacer {
     margin-left: 10px;
   }
